--- a/.github/workflows/init.yaml
+++ b/.github/workflows/init.yaml
@@ -6,7 +6,6 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    needs: lint
     steps:
       - name: Check out code
         uses: actions/checkout@v2
@@ -31,6 +30,7 @@ jobs:
 
   publish:
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: Create release
         id: create_release
